--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
       <div class="col-md-6">
         <div id="chart_div1" class="chart"></div>
       </div>
-      
+      <div class="col-md-7">
+        <div id="chart_div2" class="chart"></div>
+      </div>
     </div>
   </body>
 </html>
